<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:padding="34dp">

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_input_field"
        android:hint="@string/hint_login"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_primary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_below="@id/editLogin"
        android:layout_marginTop="44dp"
        android:background="@drawable/bg_input_field"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_primary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_button_primary"
        android:text="@string/btn_login"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        android:textAllCaps="true" />

</RelativeLayout>
